--- a/build_config/package.json
+++ b/build_config/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install-rules": "cat rules.txt | xargs npm install -D",
+    "install-rules": "cat textlint-rules.txt | xargs npm install -D",
     "compile": "npm run compile-textlint-worker && npm run rename-worker",
     "compile-textlint-worker": "textlint-script-compiler --textlintrc ./textlintrc.json --mode production --output-dir ./worker --metadataName 'textlint-worker' --metadataNamespace 'http://localhost:3000/' --metadataHomepage 'http://localhost:3000/'",
     "rename-worker": "mv ./worker/textlint-worker{,.worker}.js"
