--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,6 @@ data.json
 # Exclude macOS Finder (System Explorer) View States
 .DS_Store
 
-build_config/package-lock.json
+textlint-builder/*-lock.json
+textlint-builder/worker
+dist
