--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
   "dependencies": {
     "@types/lodash-es": "^4.17.6",
     "lodash-es": "^4.17.21"
-  }
+  },
+  "packageManager": "pnpm@8.6.5"
 }
