--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,6 @@ data.json
 
 textlint-builder/*-lock.json
 textlint-builder/worker
+textlint-builder/my-packages.json
+textlint-builder/my-rc.json
 dist
